--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -255,13 +255,16 @@ a{color: #30A4FF;}
 			margin-bottom: 15px;width: 100%;height: 35px;line-height: 35px;
 			span,input,.selector{float: left;height: 35px;line-height: 35px;}
 			.selector{
+				width: 150px;height: 35px;display: inline-block;vertical-align: middle;background: #eee;background: #fff;
 				ul{top: 35px;}
+				&.ty_long{
+					width: 320px;background: #FFFFFF;border: 1px solid #DDDDDD;border-radius: 2px;
+				}
 			}
-			span:first-child{margin-right: 10px;}	
+			& > span:first-child{margin-right: 10px;}	
 			input.ty_long{
-				width: 320px;background: #FFFFFF;border: 1px solid #DDDDDD;border-radius: 2px;
+				width: 320px;background: #FFFFFF;border: 1px solid #DDDDDD;border-radius: 2px; padding: 0 10px;
 			}
-			.selector{width: 150px;height: 35px;display: inline-block;vertical-align: middle;background: #eee;background: #fff;}
 		}
 	}
 	.manualSurer{
