--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -68,8 +68,9 @@ a{color: #30A4FF;}
 .head-top{
 	width: 100%;height: 30px;background: #343F52;overflow: hidden;
 	.lg-info{
-		width: 1200px;margin: 0 auto;color: #fff;
-		span{float: right;}
+		width: 1200px;margin: 0 auto;color: #fff;overflow: hidden;height: 100%;line-height: 30px;
+		span{float: right;font-size: 12px;b{margin-left: 10px;}}
+		span:first-child{margin-left: 20px;cursor: pointer;}
 	 }
 }
 .head-bot{
@@ -152,7 +153,7 @@ a{color: #30A4FF;}
 				}
 			}
 			.s-account{
-				input{width: 388px;height: 26px;}
+				input{width: 388px;height: 26px;padding: 0 10px;}
 			}
 			.searchBtn{
 				span{	
@@ -168,7 +169,7 @@ a{color: #30A4FF;}
 		.searchResult{
 			overflow: hidden;margin-top: 20px;color: #666;
 			.overview{
-				b{color: #F26C4E;margin: 0 5px;}
+				a{color: #F26C4E;margin: 0 5px;}
 			}
 			table{
 				width: 990px;margin-top: 20px;border: 1px solid #E1E1E1;border-left: none;
@@ -176,12 +177,12 @@ a{color: #30A4FF;}
 				td,th{text-align: center;border-left: 1px solid #E1E1E1;padding: 18px 9px;word-wrap:break-word;word-break:break-all;color: #666;}
 				th{border-bottom: 2px solid #E1E1E1;height: 45px;padding:0 9px;color: #333;font-weight: normal;}
 				.operatecheck span{border: 1px solid #30A4FF;border-radius: 2px;background: #fff;padding: 0px 6px;color: #30A4FF;cursor: pointer;display: inline-block;}
-				.operatecheck a{margin-right: 12px;}
+				.operatecheck a{margin-right: 12px;color: #30A4FF;cursor: pointer;}
 				.nocheckitem .hlight,.checkFail .hlight{color:#F26C4E;}
 				.checkSuc .hlight{color:#00C651;}
 				.hascheckitem .operatecheck span{display: none;}//已对账不显示
 				.checkConfirm .operatecheck{//已确认不显示
-					& a,& span{
+					&>a,&>span{
 						display: none;	
 					}
 				}
@@ -211,7 +212,7 @@ a{color: #30A4FF;}
 	}
 	.middler{
 		width: 90%;height: 135px;text-align: center;padding-top: 45px;font-size: 16px;font-weight: bold;margin:0 auto;
-		.ico{vertical-align: middle;}
+		.ico{vertical-align: middle;margin-right: 10px;}
 		&.success{
 			.ico{.ico-success;}
 		}
@@ -329,7 +330,7 @@ a{color: #30A4FF;}
 				td,th{text-align: center;border-left: 1px solid #E1E1E1;padding: 18px 9px;word-wrap:break-word;word-break:break-all;color: #666;}
 				th{border-bottom: 2px solid #E1E1E1;height: 45px;padding:0 9px;color: #333;font-weight: normal;}
 				.handleConf{
-					a{border:1px solid #30A4FF;border-radius: 2px;color: #30A4FF;text-align: center;padding:2px 10px;}
+					span{border:1px solid #30A4FF;border-radius: 2px;color: #30A4FF;text-align: center;padding:2px 10px;display: inline-block;cursor: pointer;}
 				}
 			}	
 	}
