--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -343,38 +343,39 @@ a{color: #30A4FF;}
 		width: 350px;height: 360px;background:#fff;position: absolute;right: 50px;top: 50%;margin-top: -180px;border-radius: 8px;padding: 30px 25px 40px;
 		.loginError{width: 100%;height: 30px;line-height: 30px;font-size: 12px;color: #F26C4E;}
 		.formin{
-			width: 100%;margin-bottom: 25px;
+			width: 100%;margin-bottom: 25px;position: relative;
 			input{width: 100%;height: 40px; line-height: 40px;border:1px solid #ccc;color: #999;font-size: 12px;padding: 0 10px 0 40px;}
 			&.account:before{
+				.ico-loginame;
 				content: '';
 				display: block;
-				width: 20px;
-				height: 20px;
 				clear: both;
-				visibility:hidden;
 				zoom: 1;
-				.ico-loginame;
 				position: absolute;
 				left: 0;
-				top: 0;
+			    top: 50%;
+			    margin-top: -10px;
+			    margin-left: 10px;
 			}
 			&.password:before{
+				.ico-loginpwd;
 				content: '';
 				display: block;
-				width: 20px;
-				height: 20px;
 				clear: both;
-				visibility:hidden;
 				zoom: 1;
-				.ico-loginpwd;
 				position: absolute;
 				left: 0;
-				top: 0;
+				top: 50%;
+			    margin-top: -10px;
+			    margin-left: 10px;
 			}
 		}
 		.submitBtn{
 			width: 100%;margin-top: 25px;
-			span{background: #30A4FF;border-radius: 4px;width: 300px;height: 40px;line-height: 40px;text-align: center;display: block;color: #fff;cursor: default;margin-top: 90px;}
+			span{
+				background: #30A4FF;border-radius: 4px;width: 300px;height: 40px;line-height: 40px;text-align: center;display: block;color: #fff;cursor: default;margin-top: 90px;
+				&:hover{background: #2b99f0;}
+			}
 		}
 	}
 }
