--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -337,14 +337,15 @@ a{color: #30A4FF;}
 	#d-of-unch{display: none;}
 }
 // login
+#loginPage{width: 100%;height: 100%;}
 .loginMidWrap{
 	width: 100%;height: 78%;min-height: 600px;min-width: 1200px;background-image: url(../img/loginbg.jpg);background-repeat: no-repeat;background-position: center;background-size: cover;position: relative;
 	.loginFrame{
-		width: 350px;height: 360px;background:#fff;position: absolute;right: 50px;top: 50%;margin-top: -180px;border-radius: 8px;padding: 30px 25px 40px;
+		width: 350px;height: 360px;background:#fff;position: absolute;right: 150px;top: 50%;margin-top: -180px;border-radius: 8px;padding: 30px 25px 40px;
 		.loginError{width: 100%;height: 30px;line-height: 30px;font-size: 12px;color: #F26C4E;}
 		.formin{
-			width: 100%;margin-bottom: 25px;position: relative;
-			input{width: 100%;height: 40px; line-height: 40px;border:1px solid #ccc;color: #999;font-size: 12px;padding: 0 10px 0 40px;}
+			width: 100%;margin-bottom: 25px;position: relative;background: #fff;padding-left: 40px;border:1px solid #ccc;
+			input{width: 100%;height: 40px; line-height: 40px;color: #999;font-size: 12px;padding: 0 10px 0 10px;border:none;}
 			&.account:before{
 				.ico-loginame;
 				content: '';
