--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -42,6 +42,8 @@ html,body{width: 100%;height: 100%;}
 		zoom: 1;
 	}
 }
+.c666{color: #666!important;}
+.c00C651{color: #00C651!important;}
 hr{opacity: 0.3;margin: 50px 0;}
 b{font-style: normal;font-weight: normal;}
 a{color: #30A4FF;}
@@ -153,7 +155,19 @@ a{color: #30A4FF;}
 				}
 			}
 			.s-account{
+				position: relative;
 				input{width: 388px;height: 26px;padding: 0 10px;}
+				.combineResWrap{
+					width: 388px;position: absolute;top: 28px;right: 0;z-index: 2;border: 1px solid #CCCCCC;
+					p{color: #F37255;background: #fff;line-height: 30px;width: 100%;padding:0 10px;}
+					ul {
+						max-height: 210px;overflow-x: auto;overflow-y: scroll;
+						li{
+						width: 100%;padding:0 10px;background: #fff;line-height: 30px;cursor: default;
+						&:hover{background: #edf7ff;}
+						}
+					}
+				}
 			}
 			.searchBtn{
 				span{	
@@ -253,7 +267,7 @@ a{color: #30A4FF;}
 	.former{
 		color: #666;margin: 20px 30px -15px 30px;
 		.formitem{
-			margin-bottom: 15px;width: 100%;height: 35px;line-height: 35px;
+			margin-bottom: 15px;width: 100%;height: 35px;line-height: 35px;position: relative;
 			span,input,.selector{float: left;height: 35px;line-height: 35px;}
 			.selector{
 				width: 150px;height: 35px;display: inline-block;vertical-align: middle;background: #eee;background: #fff;
@@ -262,9 +276,20 @@ a{color: #30A4FF;}
 					width: 320px;background: #FFFFFF;border: 1px solid #DDDDDD;border-radius: 2px;
 				}
 			}
-			& > span:first-child{margin-right: 10px;}	
+			& > span:first-child{margin-right: 10px;width: 60px;}	
 			input.ty_long{
 				width: 320px;background: #FFFFFF;border: 1px solid #DDDDDD;border-radius: 2px; padding: 0 10px;
+			}
+			.combineResWrap{
+				width: 320px;position: absolute;top: 36px;right: 0;z-index: 2;border: 1px solid #CCCCCC;
+				p{color: #F37255;background: #fff;line-height: 30px;width: 100%;padding:0 10px;}
+				ul {
+					max-height: 120px;overflow-x: auto;overflow-y: scroll;
+					li{
+					width: 100%;padding:0 10px;background: #fff;line-height: 30px;cursor: default;
+					&:hover{background: #edf7ff;}
+					}
+				}
 			}
 		}
 	}
