优化详情页主页请求

--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -156,7 +156,7 @@ a{color: #30A4FF;}
 			}
 			.s-account{
 				position: relative;
-				input{width: 388px;height: 26px;padding: 0 10px;}
+				input{width: 388px;height: 26px;padding: 0 10px;float: left;}
 				.combineResWrap{
 					width: 388px;position: absolute;top: 28px;right: 0;z-index: 2;border: 1px solid #CCCCCC;
 					p{color: #F37255;background: #fff;line-height: 30px;width: 100%;padding:0 10px;}
